tdf#108349: fix LanguageType conversions from UNO "short"

The bugdoc uses LANGUAGE_USER_LATIN_VATICAN LanguageType(0x8076).

The UNO API uses signed "short" for these in various interfaces,
and so the LanguageType constructor complains about
out-of-(short)-range values.

Avoid this by deleting the problematic constructor, so that the places
that currently call it with API parameters can be changed to first
cast the parameter to unsigned.

(Yes, we need to write "template<>" twice in a row. Don't ask me why, i
 just work here. sberg says we also need to omit the explict <short>.)

Change-Id: I2443a89bc8d579504fc707ded3d145f9a625597a
Reviewed-on: https://gerrit.libreoffice.org/38473
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Michael Stahl <mstahl@redhat.com>
(cherry picked from commit 93a41b20538f18344eb1b8c23b1eae134212b141)
Reviewed-on: https://gerrit.libreoffice.org/38499
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>